# tokemon

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FUTURE.md  README.md  tokemon.sh
.github/workflows/: release.yml
src/: aggregator.rs  cache.rs  cli.rs  config.rs  cost.rs  dedup.rs  demo.rs  display.rs  error.rs  lib.rs  main.rs  mcp.rs  output.rs  pacemaker.rs  paths.rs  pipeline.rs  pricing.rs  render.rs  rollup.rs  timestamp.rs  types.rs
src/provider/: amp.rs  claude_code.rs  cline.rs  cline_format.rs  codex.rs  copilot.rs  cursor.rs  droid.rs  gemini.rs  jsonl_provider.rs  kilo_code.rs  kimi.rs  mod.rs  openclaw.rs  opencode.rs  pi_agent.rs  piebald.rs  qwen.rs  roo_code.rs
src/render/: csv.rs  table.rs
src/source/: amp.rs  claude_code.rs  cline.rs  cline_format.rs  codex.rs  copilot.rs  cursor.rs  discover.rs  droid.rs  gemini.rs  json_session_source.rs  jsonl_source.rs  kilo_code.rs  kimi.rs  mod.rs  openclaw.rs  opencode.rs  pi_agent.rs  piebald.rs  qwen.rs  roo_code.rs
src/tui/: app.rs  diff.rs  event.rs  mod.rs  theme.rs  watcher.rs
src/tui/views/: dashboard.rs  help.rs  settings.rs
src/tui/widgets/: heatmap.rs  mod.rs  spike_chart.rs  status_bar.rs  summary_cards.rs  usage_table.rs
tests/: integration.rs
tests/fixtures/: claude_sample.jsonl  cline_sample.json  codex_sample.jsonl  gemini_sample.json
