[package]
name = "tokemon"
version = "0.1.0"
edition = "2021"
description = "Unified LLM token usage tracking across all providers"
license = "MIT"

[dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system
directories = "5"
glob = "0.3"

# Table output
tabled = "0.17"

# Config
toml = "0.8"

# Cache
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP (for pricing data fetch)
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
