[package]
name = "tokemon"
version = "0.2.0-alpha.2"
edition = "2021"
description = "Unified LLM token usage tracking across all providers"
license = "MIT"
repository = "https://github.com/mm65x/tokemon"
homepage = "https://github.com/mm65x/tokemon"
readme = "README.md"
keywords = ["llm", "tokens", "usage", "cli", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system
directories = "5"

# Table output
tabled = { version = "0.17", features = ["ansi"] }

# Config
toml = "0.8"

# Cache
rusqlite = { version = "0.32", features = ["bundled"] }

# Terminal detection
terminal_size = "0.4"

# HTTP (for pricing data fetch)
ureq = { version = "2", default-features = false, features = ["tls", "native-certs", "json"] }

# TUI (tokemon top)
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
futures-lite = "2"
notify = "7"
notify-debouncer-mini = "0.5"
